# rules-bison-pkgdatadir-repro

./: .gitignore  MODULE.bazel  README.md  cmake-build.sh
repro/: BUILD  CMakeLists.txt  meson.build  rpcalc.y  rules.bzl
