"""Module reproducing the BISON_PKGDATADIR error from rules_foreign_cc's cmake()"""

module(name = "rules-bison-pkgdatadir-repro", version = "0.0.0")

# rules_foreign_cc

bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
use_repo(
    tools,
    "cmake_3.23.2_toolchains",
    "rules_foreign_cc_framework_toolchains",
)

register_toolchains(
    "@rules_foreign_cc_framework_toolchains//:all",
    "@cmake_3.23.2_toolchains//:all",
    "@rules_foreign_cc//toolchains:built_ninja_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_m4_toolchain",
)

# rules_m4

bazel_dep(name = "rules_m4", version = "0.2.3")

m4 = use_extension(
    "@rules_m4//m4/extensions:m4_repository_ext.bzl",
    "m4_repository_ext",
)
m4.repository(
    name = "m4",
    version = "1.4.18",
)
use_repo(m4, "m4")

register_toolchains("@m4//:toolchain")

# rules_bison

bazel_dep(name = "rules_bison", version = "0.2.2")

bison = use_extension(
    "@rules_bison//bison/extensions:bison_repository_ext.bzl",
    "bison_repository_ext",
)
bison.repository(
    name = "bison",
    version = "3.3.2",
)
use_repo(bison, "bison")

register_toolchains("@bison//:toolchain")
