"""Module reproducing the BISON_PKGDATADIR error from rules_foreign_cc's cmake()"""

module(name = "rules-bison-pkgdatadir-repro", version = "0.0.0")

bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "rules_m4", version = "0.2.3")
bazel_dep(name = "rules_bison", version = "0.2.2")

m4 = use_extension(
    "@rules_m4//m4/extensions:m4_repository_ext.bzl",
    "m4_repository_ext",
)
m4.repository(
    name = "m4",
    version = "1.4.18",
)
use_repo(m4, "m4")

bison = use_extension(
    "@rules_bison//bison/extensions:bison_repository_ext.bzl",
    "bison_repository_ext",
)
bison.repository(
    name = "bison",
    version = "3.3.2",
)
use_repo(bison, "bison")
