"""Module reproducing the BISON_PKGDATADIR error from rules_foreign_cc's cmake()"""

module(name = "rules-bison-pkgdatadir-repro", version = "0.0.0")

bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "rules_m4", version = "0.2.3")
bazel_dep(name = "rules_bison", version = "0.2.2")

git_override(
    module_name = "rules_bison",
    remote = "https://github.com/jmillikin/rules_bison",
    commit="e8d151d3efdac2b1ff4208de81e3312729242f49",
)

m4 = use_extension(
    "@rules_m4//m4/extensions:m4_repository_ext.bzl",
    "m4_repository_ext",
)
m4.repository(
    name = "m4",
    version = "1.4.18",
)
use_repo(m4, "m4")

bison = use_extension(
    "@rules_bison//bison/extensions:bison_repository_ext.bzl",
    "bison_repository_ext",
)
bison.repository(
    name = "bison",
    version = "3.3.2",
)
use_repo(bison, "bison")

bazel_dep(name = "rules_python", version = "0.36.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # NOTE: https://github.com/bazelbuild/rules_python/pull/713
    # we need to override rules_python so that it works with root
    # users which is something that's common with remote builds,
    # containers or CI/CD pipelines
    ignore_root_user_error = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12")
